# slang-compile-timer

./: .gitignore  CMakeLists.txt  README.md  compiler_dxc.h  compiler_shaderc.h  compiler_slang.h  main.cpp  shader.comp.glsl  utilities.h
examples/pathtrace-glsl/: gltf_pathtrace.comp.glsl  vertex_accessor.h
examples/pathtrace-hlsl/: bsdf_functions.hlsli  bsdf_structs.hlsli  constants.hlsli  device_host.hlsli  dh_bindings.hlsli  dh_lighting.hlsli  dh_scn_desc.hlsli  dh_sky.hlsli  func.hlsli  ggx.hlsli  gltf_pathtrace.hlsl  light_contrib.hlsli  pbr_mat_eval.hlsli  pbr_mat_struct.hlsli  random.hlsli  ray_util.hlsli  vertex_accessor.hlsli
examples/pathtrace-slang/: bsdf_functions.slang  bsdf_structs.slang  constants.slang  device_host.slang  dh_bindings.slang  dh_lighting.slang  dh_scn_desc.slang  dh_sky.slang  func.slang  ggx.slang  gltf_pathtrace.slang  light_contrib.slang  pbr_mat_eval.slang  pbr_mat_struct.slang  random.slang  ray_util.slang  vertex_accessor.slang
examples/simple/: shader.hlsl  shader.slang
